@@ -18,6 +18,7 @@
 * CheckoutV2: Add inquire method [almalee24] #5209
 * Iveri: Add AuthReversal for Authorizations [almalee24] #5201
 * Decidir & Braintree: Scrub cryptogram and card number [almalee24] #5220
+* Naranja: Update valid number check to include luhn10 [DustinHaefele] #5217
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
